AssignmentGit/force-app/main/default/objects/Bike__c/Bike__c.object-meta.xml
<CustomObject>
    <label>Bike</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bike Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bikes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>