AssignmentGit/force-app/main/default/objects/Bike__c/fields/kilometeres__c.field-meta.xml
<CustomField>
    <fullName>kilometeres__c</fullName>
    <formula>10000000-100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>kilometeres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>